--- a/GUIApp/GUIApp/GUIApp.csproj
+++ b/GUIApp/GUIApp/GUIApp.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Python.Runtime" Version="2.7.9" />
+    <PackageReference Include="pythonnet" Version="3.0.3" />
+  </ItemGroup>
+
 </Project>
